# Magnetosphericn-B-duct-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
archive/legacy_notebooks/: CNN File.ipynb  Model Trainer.ipynb  README.md  RF_File.ipynb  Training 2.ipynb
labels/: example_event_labels.csv
notebooks/: 01_mms_data_ingest_interpolation.ipynb  02_event_dataset_and_quicklooks.ipynb  03_feature_preparation.ipynb  04_model_cnn.ipynb  04_model_cnn_lstm_v2.ipynb  04_model_random_forest.ipynb
src/duct_detection/: __init__.py  data_ingest.py  event_dataset.py  ml_preparation.py  plotting.py
